--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: app-ingress
-  namespace: leaf-guard-app
+  namespace: dev
 spec:
   ingressClassName: nginx
   rules:
