--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,15 +1,15 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ecsdemo-nodejs
+  name: hello-world
   labels:
-    app: ecsdemo-nodejs
+    app: hello-world
   namespace: dev
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ecsdemo-nodejs
+      app: hello-world
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -18,12 +18,12 @@ spec:
   template:
     metadata:
       labels:
-        app: ecsdemo-nodejs
+        app: hello-world
     spec:
       containers:
       - image: 287559100945.dkr.ecr.ap-south-1.amazonaws.com/aimlops-leafguard-app:sample
         imagePullPolicy: Always
-        name: ecsdemo-nodejs
+        name: hello-world
         ports:
         - containerPort: 3000
         resources:
