--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ecsdemo-nodejs
+  name: hello-world
 spec:
   selector:
-    app: ecsdemo-nodejs
+    app: hello-world
   type: ClusterIP
   ports:
     - port: 443          # The port that the service will expose for HTTPS
