--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -6,8 +6,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "ab5312bdb1ea54ee4863641107f1751d-540494692.ap-south-1.elb.amazonaws.com"
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
